# prime_numbers

./: pyproject.toml
prime_numbers/: __main__.py  rand.py
tests/: test_prime_numbers.py
