[tool.poetry]
name = "prime_numbers"
version = "0.1.0"
description = ""
authors = ["Arthur Mesquita Pickcius <arthur.pickcius@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
flake8 = "^3.7"
black = {version = "^18.3-alpha.0",allows-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
